feat: add components

--- a/src/App.less
+++ b/src/App.less
@@ -36,5 +36,12 @@
 @layout-trigger-color-light: @text-color;
 
 .ant-layout{
-  min-height: calc(100vh - 46px);
+  height: 100vh;
+}
+
+.item-container{
+  margin: 1px;
+  padding: 6px;
+  border: 1px dashed hsla(0,0%,66.7%,.7);
+  background-color: rgba(236,245,255,.3);
 }
