feat(config): 增加组件属性编辑逻辑

--- a/src/App.less
+++ b/src/App.less
@@ -45,3 +45,15 @@
   border: 1px dashed hsla(0,0%,66.7%,.7);
   background-color: rgba(236,245,255,.3);
 }
+
+.form-item-line{
+  display: flex;
+  align-items: center;
+  span.label{
+    min-width: 60px;
+  }
+}
+
+.config-item-line {
+  margin: 5px;
+}
