feat(style): 选中的组件增加样式

--- a/src/style/var.less
+++ b/src/style/var.less
@@ -1,5 +1,3 @@
-@import '~antd/dist/antd.less';
-
 // 覆盖antd 样式
 
 @primary-color: #409EFF; // 全局主色
@@ -35,25 +33,5 @@
 @layout-trigger-background-light: #fff;
 @layout-trigger-color-light: @text-color;
 
-.ant-layout{
-  height: 100vh;
-}
-
-.item-container{
-  margin: 1px;
-  padding: 6px;
-  border: 1px dashed hsla(0,0%,66.7%,.7);
-  background-color: rgba(236,245,255,.3);
-}
-
-.form-item-line{
-  display: flex;
-  align-items: center;
-  span.label{
-    min-width: 60px;
-  }
-}
-
-.config-item-line {
-  margin: 5px;
-}
+// 
+@select: rgb(219, 236, 255);
