feat(schema): 同步schema

--- a/src/style/App.less
+++ b/src/style/App.less
@@ -5,6 +5,7 @@
   padding: 6px;
   border: 1px dashed hsla(0,0%,66.7%,.7);
   background-color: rgba(236,245,255,.3);
+  cursor: pointer;
   &.selected {
     border: 1px dashed @primary-color;
     background-color: @select;
