feat(generateCode): 生成代码及展示

--- a/src/style/AntD.less
+++ b/src/style/AntD.less
@@ -4,6 +4,9 @@
 
 @import './var.less';
 
+@import '~codemirror/lib/codemirror.css';
+// @import '~codemirror/theme/material.css';
+
 .ant-layout{
   height: 100vh;
 }
