--- a/src/style/App.less
+++ b/src/style/App.less
@@ -1,5 +1,11 @@
 @import './var.less';
 
+.header-title{
+  font-size: 20px;
+  font-weight: 700;
+  line-height: @layout-header-height;
+  margin-right: 50px;
+}
 .item-container{
   margin: 1px;
   padding: 6px;
@@ -22,4 +28,18 @@
 
 .config-item-line {
   margin: 5px;
+}
+
+.generate-buttom {
+  color: @text-color;
+  margin-left: 20px;
+  font-weight: 700;
+  cursor: pointer;
+  &:hover{
+    color: gray;
+  }
+}
+
+.CodeMirror {
+  height: auto;
 }
