feat(Col): 增加 Col Row 栅格展示/编辑

--- a/src/style/App.less
+++ b/src/style/App.less
@@ -36,6 +36,9 @@
 
 .config-item-line {
   margin: 10px 5px;
+  &>span:first-child {
+    font-weight: bold;
+  }
   .options {
     display: flex;
     align-items: center;
