--- a/src/style/App.less
+++ b/src/style/App.less
@@ -15,7 +15,7 @@
 }
 .item-container{
   margin: 1px;
-  padding: 6px;
+  padding: 4px;
   border: 1px dashed hsla(0,0%,66.7%,.7);
   background-color: rgba(236,245,255,.3);
   cursor: pointer;
@@ -35,7 +35,8 @@
 }
 
 .config-item-line {
-  margin: 10px 5px;
+  padding: 5px 5px;
+  border-top: 1px solid @border-color-base;
   &>span:first-child {
     font-weight: bold;
   }
