style: update style

--- a/src/style/AntD.less
+++ b/src/style/AntD.less
@@ -18,3 +18,13 @@
 .ant-form-item{
   margin-bottom: 0;
 }
+
+.ant-layout-header {
+  box-shadow: 0 2px 10px #1a6edb;
+  z-index: 100;
+}
+
+.ant-layout-sider-children{
+  border-right: 1px solid @border-color-base;
+  border-left: 1px solid @border-color-base;
+}
