--- a/src/style/App.less
+++ b/src/style/App.less
@@ -63,3 +63,27 @@
 .CodeMirror {
   height: auto;
 }
+
+.editor-box {
+  position: relative;
+  margin: 4px;
+  padding: 4px;
+  // border: 1px solid hsla(0,0%,66.7%,.7);
+  min-height: 98%;
+  .empty-text {
+    position: absolute;
+    text-align: center;
+    top: 30%;
+    width: 100%;
+    color: @text-color-secondary;
+    font-size: 20px;
+  }
+}
+
+.drawer-box {
+  padding: 20px 5px;
+  .item-box {
+    margin: 2px;
+    width: 48%;
+  }
+}
