feat(DSL): 增加接口字段解析

--- a/src/style/App.less
+++ b/src/style/App.less
@@ -87,3 +87,13 @@
     width: 48%;
   }
 }
+
+// 配置页
+.config{
+  .ant-tabs .ant-tabs-small-bar .ant-tabs-tab{
+    padding: 8px 8px;
+  }
+  .ant-tabs-nav .ant-tabs-tab{
+    margin-right: 5px;
+  }
+}
